# kindd

./: .envrc  .gitignore  .nvimrc  .vimspector.json  CMakeLists.txt  README.md  kindd.pro  qml.qrc  shell.nix
appconf/: kindd.desktop  qtquickcontrols2.conf
assets/appconf/: kindd.desktop
assets/changelogs/: 2.1.0
assets/js/: CanvasUtil.js  ElementCreator.js
assets/js/strings/: SettingsStrings.js
assets/qml/: qml.qrc
assets/qml/components/: LinArcXHLine.qml  LinArcxSplashScreen.qml  LinarcxAccordionTemplate.qml  LinarcxButton.qml  LinarcxDialog.qml  LinarcxHLine.qml  LinarcxTextField.qml  LinarcxToolTiper.qml  Opacitor.qml  SpacerHorizontal.qml  ToolTipArea.qml
assets/qml/pages/: CreateISO.qml  Settings.qml
changelogs/: 1.0.0  2.0.0
core/: CMakeLists.txt  main.cpp
garbage/.ccls-cache/@mnt@D@Document@WorkSpace@Qt@Project@kindd@garbage/: main.cpp.blob
libs/QDeviceWatcher/: qdevicewatcher_mac.cpp
modules/: CMakeLists.txt
modules/core/: main.cpp
modules/core/dispatcher/: dispatcher.cpp  dispatcher.h  dispatcherMacro.h
modules/create_iso/: create_iso.cpp  create_iso.h
modules/dispatcher/: dispatcher.cpp  dispatcher.h  dispatcher_macro.h
modules/pages/: main.qml
modules/pages/createISO/presenter/: createISO.cpp  createISO.h  createISOMacro.h
modules/pages/createISO/view/: CreateISO.qml
modules/pages/listDevices/presenter/: ListDevices.cpp  ListDevices.h  ListDevicesMacro.h
modules/pages/listDevices/view/: ListDevices.qml  disks.qml
modules/pages/settings/presenter/: settings.cpp  settings.h
modules/pages/settings/view/: Settings.qml
modules/qdevice_watcher/: qdevice_watcher.cpp  qdevicewatcher_linux.cpp  qdevicewatcher_win32.cpp  qdevicewatcher_wince.cpp
modules/settings/: settings.cpp  settings.h
modules/utility/: command_utility.cpp  command_utility.h  file_utility.cpp  file_utility.h  format_utility.cpp  format_utility.h  utility.cpp  utility.h  utility_macro.h
sources/: main.cpp
sources/create_iso/: create_iso.cpp  create_iso.hpp
sources/dispatcher/: dispatcher.cpp  dispatcher.hpp
sources/qdevice_watcher/: qdevice_watcher.cpp  qdevicewatcher_linux.cpp  qdevicewatcher_win32.cpp  qdevicewatcher_wince.cpp
sources/settings/: settings.cpp  settings.hpp  settings_macro.hpp
sources/utility/: command_utility.cpp  command_utility.hpp  file_utility.cpp  file_utility.hpp  format_utility.cpp  format_utility.hpp  utility.cpp
util/cpp/: PropertyHelper.h  utils.cpp
util/cpp/sortFilterProxyModel/: sortfilterproxymodel.cpp  sortfilterproxymodel.h
util/js/: Constants.js  MenuCreator.js
util/qml/: LinArcXCardView.qml  LinArcXHLine.qml  LinArcxAccordionItem.qml  LinArcxDialog.qml  LinArcxPopUp.qml  LinArcxTableView.qml  LinArcxTableViewStyle.qml  LinarcxAccordion.qml  LinarcxImageToolTiper.qml  LinarcxLabel.qml  LinarcxPopUp.qml  LinarcxPopUp2.qml  LinarcxScaler.qml  LinarcxScrollViewStyle.qml  LinarcxSpacerVertical.qml  LinarcxToast.qml  LinarcxToastComponent.qml  LinarcxToolTip.qml  TextScroll.qml
util/strings/: CoreStrings.js
